--- a/ICP-2/index.html
+++ b/ICP-2/index.html
@@ -18,7 +18,7 @@
     <p>Web development is the process of building websites and applications for the internet, or for a private network known as an intranet.
         Web development is not concerned with the design of a website; rather, it's all about the coding and programming that powers the website's functionality.</p>  <!--    Paragraph tag-->
     <h3>Top 5 web programming languages</h3>
-    <a href="https://www.cleverism.com/programming-languages-web-development/" target="_blank"><img src="image1.png" width="300" height="300" style="float: right; margin-left: 5px; margin-bottom: 5px;" ></a> <!--    image tag-->
+    <a href="capture1.png" target="_blank"><img src="capture1.png" width="300" height="300" style="float: right; margin-left: 5px; margin-bottom: 5px;" ></a> <!--    image tag-->
     <ul> <!--    unordered list-->
         <li>Javascript</li>
         <li> Python</li>
@@ -28,7 +28,7 @@
         <li>HTML and CSS</li>
     </ul>
     <h3>Best Mobile Programming languages</h3>
-    <a href="https://soshace.com/web-software-development-fundamentals/" target="_blank"><img src="image2.png" width="300" height="300" style="float: right; margin-left: 5px; margin-bottom: 5px;  "></a> <!--    image tag-->
+    <a href="capture2.png" target="_blank"><img src="capture2.png" width="300" height="300" style="float: right; margin-left: 5px; margin-bottom: 5px;  "></a> <!--    image tag-->
     <ol> <!--   ordered list-->
         <li> React Native (Javascript)</li>
         <li> Kotlin</li>
@@ -71,15 +71,8 @@
         </div>
     </div>
 </section>
-<div>
-    <h3>Reference video to learn Web in 10 hours:</h3>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/Q33KBiDriJY"> <!--    Embedding video-->
-    </iframe>
-</div>
-<video width="420" height="345">
-    <source src="https://www.youtube.com/embed/Q33KBiDriJY" type="	video/webm">
+<video width="420" height="345" controls>
+    <source src="video.mp4" type="video/mp4">
 </video>
-<object data='https://www.youtube.com/embed/Q33KBiDriJY'
-        width='560px' height='315px'>
 </body>
 </html>
