--- a/ICP-2/Google task/index.html
+++ b/ICP-2/Google task/index.html
@@ -34,14 +34,14 @@
     </div>
     <div id="recent">
         <div class="grid-container">
-            <div class="grid-item"><img src="Capture1.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture2.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture3.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture4.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture5.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture6.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture7.png" class="fav-link" ></div>
-            <div class="grid-item"><img src="Capture8.png" class="fav-link" ></div>
+            <div class="grid-item"><a href="https://umsystem.instructure.com/" target="_blank"><img src="Capture1.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://umsystem.instructure.com/" target="_blank"><img src="Capture2.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://github.com/vandana573/Web/" target="_blank"><img src="Capture3.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://umsystem.instructure.com/courses/" target="_blank"><img src="Capture4.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://umkc.umsystem.edu/psp/csprdk/EMPLOYEE/SA/c/SA_LEARNER_SERVICES.SSS_STUDENT_CENTER.GBL?&" target="_blank"><img src="Capture5.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://www.google.com/search?q=umkc+canvas+login&rlz=1C1ONGR_enUS943US943&oq=&sourceid=chrome&ie=UTF-8" target="_blank"><img src="Capture6.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://search.yahoo.com/search?fr=mcafee&type=E211US714G0&p=google.photos.com" target="_blank"><img src="Capture7.png" class="fav-link" ></a></div>
+            <div class="grid-item"><a href="https://github.com/" target="_blank"><img src="Capture8.png" class="fav-link" ></a></div>
         </div>
     </div>
 </div>
